# 001_RAG_for_Document_with_images

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: vectors.json
static/: index.html  script.js  style.css
