[project]
name = "002-rag-for-document-with-images"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.136.1",
    "numpy>=2.4.4",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "requests>=2.34.0",
    "sentence-transformers>=5.5.0",
    "uvicorn>=0.46.0",
]
